--- a/frontend/src/app/styles/Home.module.css
+++ b/frontend/src/app/styles/Home.module.css
@@ -123,7 +123,7 @@
 
 .tableControls {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-bottom: 10px;
 }
 
